--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Noteapp</title>
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="assets/css/photon.css" />
   </head>
+
   <body>
-    <h2>Welcome to new Window</h2>
+    <!-- Wrap your entire app inside .window -->
+    <div class="window">
+      <header class="toolbar toolbar-header">
+        <div class="toolbar-actions">
+          <div class="btn-group">
+            <button class="btn btn-default">
+              <span class="icon icon-plus"></span>
+            </button>
+            <button class="btn btn-default">
+              <span class="icon icon-minus"></span>
+            </button>
+          </div>
+
+          <button class="btn btn-default pull-right">
+            <span class="icon icon-download icon-text"></span>
+            Save
+          </button>
+        </div>
+      </header>
+
+      <!-- Your app's content goes inside .window-content -->
+      <div class="window-content">
+        <div class="padded-more">
+          <h1>Welcome to Photon</h1>
+          <p>
+            Thanks for downloading Photon. This is an example HTML page that's
+            linked up to compiled Photon CSS, has the proper meta tags and the
+            HTML structure.
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
