--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <title>Noteapp</title>
     <!-- Stylesheets -->
     <link rel="stylesheet" href="assets/css/photon.css" />
+    <style>
+      textarea {
+        width: 100%;
+        height: 100%;
+        resize: none;
+        border: none;
+        outline: none;
+        font-size: 20px;
+      }
+    </style>
   </head>
 
   <body>
@@ -29,14 +39,7 @@
 
       <!-- Your app's content goes inside .window-content -->
       <div class="window-content">
-        <div class="padded-more">
-          <h1>Welcome to Photon</h1>
-          <p>
-            Thanks for downloading Photon. This is an example HTML page that's
-            linked up to compiled Photon CSS, has the proper meta tags and the
-            HTML structure.
-          </p>
-        </div>
+        <textarea></textarea>
       </div>
     </div>
   </body>
